feat: add section steps

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services">
+    <section class="services none">
         <div class="services__list">
 
             <div class="service-card">
@@ -88,25 +88,43 @@
     </section>
 
     <section class="how-to">
-        <h2 class="how-to__title">Как вызвать эвакуатор в Москве?</h2>
-        <p class="how-to__description">
-            Для вызова эвакуатора ... <br>
-            Мы предлагаем ... <br>
-            Свяжитесь с нами ...
-        </p>
-        <div class="how-to__cta">
-            <a href="#" class="how-to__cta-button">Узнать больше</a>
+        <div class="how-to__content">
+            <div class="how-to__img">
+                <img src="./images/hero/ev-logo.webp" alt="Добавить Эвакуатор">
+            </div>
+            <h2 class="how-to__title">Здесь может быть ваш эвакуатор</h2>
+            <a href="#" class="btn">Добавить объявление</a>
         </div>
+
+        <div class="container">
+            <article class="call-tow">
+                <div class="call-tow__box">
+                    <h3 class="call-tow__title">Как вызвать эвакуатор в Москве дешево?</h3>
+                    <p class="call-tow__desc">Поломка авто или ДТП – случайностей на дороге много. Решение одно – вызвать эвакуатор и доставить неисправный автомобильна СТО/парковку или в гараж в Москве. С помощью онлайн-сервиса Эварус вы сможете заказать услугу эвакуатора в Москве (Московской области) максимально быстро и при этом сэкономить.</p>
+                    <p class="call-tow__desc">Мы предоставляем доступ к базе коммерческих и частных эвакуаторов Москвы. Это надежные компании, которые оперативно пришлют спецтехнику вам на помощь и обеспечат безопасную транспортировку авто.</p>
+                </div>
+
+                <div class="call-tow__img">
+                    <img src="./images/how-to/how-to-call.webp" alt="">
+                </div>
+            </article>
+        </div>
+
     </section>
 
     <section class="steps">
-        <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
-        <div class="steps__list">
-            <div class="steps__item">
-                <img src="step-icon-1.png" alt="Шаг 1" class="steps__icon">
-                <p class="steps__text">Заказ на эвакуацию ...</p>
+        <div class="container">
+            <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
+            <div class="steps__list">
+                <div class="steps__item">
+                    <img src="./images/steps/steps-item1.webp" alt="Шаг 1" class="steps__icon1">
+                    <p class="steps__text">Заказы на вызов эвакуатора в Москве перевозчики-партнеры “Тут Эвакуатор” принимают круглосуточно. Когда бы вы не позвонили, эвакуатор найдется всегда. Размещая заказ на эвакуатор, ознакомьтесь с информацией о транспортной компании, проконсультируйтесь с ее специалистами и выберите оптимальный вариант перевозки своего ТС.</p>
+                </div>
+                <div class="steps__item">
+                    <img src="./images/steps/steps-item2.webp" alt="Шаг 2" class="steps__icon2">
+                    <p class="steps__text">Примите во внимание, что одни и те же виды эвакуаторов рассчитаны на транспортировку авто разных классов. Вопрос заключается лишь в том, какой тип эвакуатор будет выгоднее задействовать в вашем случае. Следуя рекомендациям перевозчика, вы сможете недорого эвакуировать авто как в Москве, так и в области.</p>
+                </div>
             </div>
-            <!-- Repeat for other steps -->
         </div>
     </section>
 
