fix: none section

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </nav>
     </header>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services none">
+    <section class="services">
         <div class="services__list">
 
             <div class="service-card">
