feat: add section - what-inside

--- a/index.html
+++ b/index.html
@@ -128,6 +128,32 @@
         </div>
     </section>
 
+    <section class="what-inside">
+        <div class="container">
+            <h2 class="what-inside__title">Что входит в стоимость перевозки эвакуатором</h2>
+            <p class="what-inside__desc">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
+            <p class="what-inside__text">При формировании цены перевозчики берут в расчет четыре аспекта:</p>
+            <div class="what-inside__box">
+                <div class="truck">
+                    <h3 class="truck__title">Грузоподъемность эвакуатора</h3>
+                    <p class="truck__text">Чем мощнее эвакуатор, тем дороже обходится ее эксплуатация, тем внушительнее будет сумма к оплате эвакуации</p>
+                </div>
+                <div class="mileage">
+                    <h3 class="mileage__title">Предполагаемый пробег</h3>
+                    <p class="mileage__text">Учитывается удаленность стоянки эвакуатора от местоположения ТС, расстояние между пунктами погрузки в Москве и выгрузки авто</p>
+                </div>
+                <div class="repair">
+                    <h3 class="repair__title">Дополнительное оборудование</h3>
+                    <p class="repair__text">При эвакуации машин с серьезными поломками перевозчики оснащают эвакуатор вспомогательными приспособлениями, что закономерно отражается на стоимости транспортировки.</p>
+                </div>
+                <div class="difficulty">
+                    <h3 class="difficulty__title">Уровень сложности</h3>
+                    <p class="difficulty__text">При значительном повреждении автомобиля погрузочно-разгрузочные работы усложняются. Они требуют подключения водителя-оператора высокой квалификации</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="pricing">
         <h2 class="pricing__title">Стоимость вызова эвакуатора</h2>
         <ul class="pricing__list">
