feat: add sections: advantages and evacuators

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вызов эвакуатора</title>
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <header class="header">
+    <header class="header none">
         <div class="header__logo">
             <img src="./images/svg/logo.svg" alt="Logo">
         </div>
@@ -22,13 +25,13 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services">
+    <section class="services none">
         <div class="services__list">
 
             <div class="service-card">
@@ -87,7 +90,7 @@
 
     </section>
 
-    <section class="how-to">
+    <section class="how-to none">
         <div class="how-to__content">
             <div class="how-to__img">
                 <img src="./images/hero/ev-logo.webp" alt="Добавить Эвакуатор">
@@ -112,7 +115,7 @@
 
     </section>
 
-    <section class="steps">
+    <section class="steps none">
         <div class="container">
             <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
             <div class="steps__list">
@@ -128,7 +131,7 @@
         </div>
     </section>
 
-    <section class="what-inside">
+    <section class="what-inside none1">
         <div class="container">
             <h2 class="what-inside__title">Что входит в стоимость перевозки эвакуатором</h2>
             <p class="what-inside__desc">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
@@ -154,6 +157,119 @@
         </div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <h2 class="advantages__title h2-text">Преимущества онлайн-сервиса ТутЭвакуатор.Ру</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__inner">
+                    <p class="advantages__desc p-text">ТутЭвакуатор.Ру – это удобный сервис для тех, кому нужно недорого и быстро перевезти авто с техническими неисправностями или же с повреждениями, полученными при ДТП в Москве.<br><br><span>Воспользовавшись ​ТутЭвакуатор.Ру, вы сможете:</span></p>
+                    <ul class="advantages-list p-text">
+                        <li class="advantages-list__item">получить постоянный доступ к базе надежных перевозчиков Москвы — сервис работает всегда, вне зависимости от воскресных/праздничных дней</li>
+                        <li class="advantages-list__item">заказать эвакуатор круглосуточно — 24/7</li>
+                        <li class="advantages-list__item">выбрать самое экономически выгодное предложение — цены на эвакуационные услуги рыночные, разница может быть ощутимой</li>
+                        <li class="advantages-list__item">договориться с транспортной компанией напрямую — без посредников и комиссионных</li>
+                        <li class="advantages-list__item">осуществить эвакуацию авто недорого — без скрытых платежей, неучтенных расходов</li>
+                        <li class="advantages-list__item">вызвать эвакуатор в срочном порядке — охвачена Московская область, стоянки спецтехники базируются во многих районах Москвы, подача выполняется оперативно</li>
+                    </ul>
+                </div>
+                <div class="advantages__img">
+                    <img src="./images/advantages/man.webp" alt="Man">
+                </div>
+            </div>
+
+            <div class="evacuator-info">
+                <div class="evacuator-info__payment">
+                    <h2 class="evacuator-info__title h3-text">Как оплатить заказ на эвакуатор</h2>
+                    <p class="evacuator-info__text p-text">
+                        Услуги по эвакуации вы оплачиваете непосредственно исполнителю – транспортной компании, взявшейся за перевозку вашего ТС. Оплата производится по завершении эвакуации, после выгрузки авто в конечной точке в Москве.
+                    </p>
+                    <p class="evacuator-info__text p-text">
+                        Формы оплаты стандартные для Москвы: наличный/безналичный расчет или банковский перевод. Эварус не взимает комиссионные с клиента за пользование сервисом.
+                    </p>
+                </div>
+                <div class="evacuator-info__arrival">
+                    <h2 class="evacuator-info__title h3-text">Как скоро прибудет эвакуатор</h2>
+                    <p class="evacuator-info__text p-text">
+                        При оформлении заказа перевозчик сообщит вам расчетное время прибытия эвакуатора в точку погрузки авто. Как правило, в Москве это происходит в течение 10–15 мин., но зависит от загруженности дорог Москвы и погодных условий.<br>
+                        Перевозчик, принявший заказ, будет информировать вас о наличии дорожных пробок и возможной задержке подачи эвакуатора. Благодаря нашым партнёрам находящимся во многих районах Москвы, поэтому мы рекомендуем вам выбирать ближайший эвакуатор, чтобы ускорить процесс транспортировки авто.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="evacuators container">
+        <h2 class="evacuators__title h2-text">Какой вес может взять на борт эвакуатор</h2>
+        <p class="evacuators__description p-text">
+            Эвакуатор используют для перевозки всех видов автотранспорта: от небольших квадроциклов до габаритных коммерческих авто. Эвакуатор способен транспортировать автомобили до 8 т.
+        </p>
+
+        <h3 class="evacuators__subtitle h3-text">Виды эвакуаторов, доступные для заказа на ТутЭвакуатор.Ру:</h3>
+        <div class="swiper">
+            <div class="evacuators__types swiper-wrapper">
+                <!-- <div class="evacuators__types swiper-wrapper"> -->
+                <div class="evacuator-card swiper-slide">
+                    <!-- <div class="evacuator-card evacuator-card--crane swiper-slide slide-item"> -->
+                    <h4 class="evacuator-card__title card-title">Эвакуатор с краном-манипулятором и прямой платформой</h4>
+                    <div class="evacuator-card__image">
+                        <img src="./images/evacuator/crane-evacuator.webp" alt="Эвакуатор с краном-манипулятором и прямой платформой">
+                    </div>
+                    <p class="evacuator-card__description card-desc">
+                        Компактный и маневренный эвакуатор для транспортировки авто массой до 3.5 т. За счет вылета стрелы манипулятора осуществляет погрузку/разгрузку ТС с расстояния до 5 м. Удобен для эвакуации автомобилей с узких улиц/дворов, небольших стоянок/парковок Москвы.
+                    </p>
+                </div>
+
+                <div class="evacuator-card swiper-slide">
+                    <!-- <div class="evacuator-card evacuator-card--universal swiper-slide slide-item"> -->
+                    <h4 class="evacuator-card__title card-title">Эвакуатор с манипулятором и ломаной/сдвижной платформой</h4>
+                    <div class="evacuator-card__image">
+                        <img src="./images/evacuator/universal-evacuator.webp" alt="Эвакуатор с манипулятором и ломаной/сдвижной платформой">
+                    </div>
+                    <p class="evacuator-card__description card-desc">
+                        Универсальный и надежный эвакуатор для эвакуации любых видов транспортных средств, включая крупную сельскохозяйственную/строительную/коммунальную технику, а также авто с низким клиренсом. Этот тип эвакуатора может быть задействован при перевозке как сильно пострадавших в аварии автомобилей, так и ТС, которые в состоянии самостоятельно заехать на платформу эвакуатора.
+                    </p>
+                </div>
+
+                <div class="evacuator-card swiper-slide">
+                    <!-- <div class="evacuator-card evacuator-card--winch-platform swiper-slide slide-item"> -->
+                    <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и платформой с аппарелями</h4>
+                    <div class="evacuator-card__image">
+                        <img src="./images/evacuator/winch-platform-evacuator.webp" alt="Эвакуатор с лебедкой и платформой с аппарелями">
+                    </div>
+                    <p class="evacuator-card__description card-desc">
+                        Используется для перевозки ТС массой до 7 т. Автомобиль затаскивают на платформу эвакуатора по направляющим при помощи электрической/гидравлической/ручной лебедки. Эвакуатор данной модификации не применяется для транспортировки авто с АКПП или заблокированными колесами.
+                    </p>
+                </div>
+
+                <div class="evacuator-card swiper-slide">
+                    <!-- <div class="evacuator-card evacuator-card--partial-load swiper-slide slide-item"> -->
+                    <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто</h4>
+                    <div class="evacuator-card__image">
+                        <img src="./images/evacuator/partial-load-evacuator.webp" alt="Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто">
+                    </div>
+                    <p class="evacuator-card__description card-desc">
+                        Основное назначение – транспортировка крупнотоннажной спецтехники, грузовых авто, автобусов.
+                    </p>
+                </div>
+
+            </div>
+
+            <!-- Pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- Navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- Scrollbar -->
+            <!-- <div class="swiper-scrollbar"></div> -->
+
+        </div>
+    </section>
+
+
+
     <section class="pricing">
         <h2 class="pricing__title">Стоимость вызова эвакуатора</h2>
         <ul class="pricing__list">
@@ -168,6 +284,11 @@
             <a href="#" class="footer__link">Политика конфиденциальности</a>
         </div>
     </footer>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
+    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/main.js"></script>
+
 </body>
 
 </html>
