--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header none">
+    <header class="header">
         <div class="header__logo">
             <img src="./images/svg/logo.svg" alt="Logo">
         </div>
@@ -25,13 +25,13 @@
         </nav>
     </header>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services none">
+    <section class="services">
         <div class="services__list">
 
             <div class="service-card">
@@ -90,7 +90,7 @@
 
     </section>
 
-    <section class="how-to none">
+    <section class="how-to">
         <div class="how-to__content">
             <div class="how-to__img">
                 <img src="./images/hero/ev-logo.webp" alt="Добавить Эвакуатор">
@@ -115,7 +115,7 @@
 
     </section>
 
-    <section class="steps none">
+    <section class="steps">
         <div class="container">
             <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
             <div class="steps__list">
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="what-inside none1">
+    <section class="what-inside">
         <div class="container">
             <h2 class="what-inside__title">Что входит в стоимость перевозки эвакуатором</h2>
             <p class="what-inside__desc">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
