fix: section evacuators

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header none">
+    <header class="header none1">
         <div class="header__logo">
             <img src="./images/svg/logo.svg" alt="Logo">
         </div>
@@ -25,13 +25,13 @@
         </nav>
     </header>
 
-    <section class="hero none">
+    <section class="hero none1">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services none">
+    <section class="services none1">
         <div class="services__list">
 
             <div class="service-card">
@@ -90,7 +90,7 @@
 
     </section>
 
-    <section class="how-to none">
+    <section class="how-to none1">
         <div class="how-to__content">
             <div class="how-to__img">
                 <img src="./images/hero/ev-logo.webp" alt="Добавить Эвакуатор">
@@ -115,7 +115,7 @@
 
     </section>
 
-    <section class="steps none">
+    <section class="steps none1">
         <div class="container">
             <h2 class="steps__title">Что нужно знать, чтобы заказать эвакуатор в Москве</h2>
             <div class="steps__list">
@@ -157,7 +157,7 @@
         </div>
     </section>
 
-    <section class="advantages">
+    <section class="advantages none1">
         <div class="container">
             <h2 class="advantages__title h2-text">Преимущества онлайн-сервиса ТутЭвакуатор.Ру</h2>
             <div class="advantages__wrapper">
@@ -197,74 +197,80 @@
             </div>
 
         </div>
+
     </section>
 
-    <section class="evacuators container">
+    <section class="evacuators container none1">
         <h2 class="evacuators__title h2-text">Какой вес может взять на борт эвакуатор</h2>
         <p class="evacuators__description p-text">
             Эвакуатор используют для перевозки всех видов автотранспорта: от небольших квадроциклов до габаритных коммерческих авто. Эвакуатор способен транспортировать автомобили до 8 т.
         </p>
 
         <h3 class="evacuators__subtitle h3-text">Виды эвакуаторов, доступные для заказа на ТутЭвакуатор.Ру:</h3>
-        <div class="swiper">
-            <div class="evacuators__types swiper-wrapper">
-                <!-- <div class="evacuators__types swiper-wrapper"> -->
-                <div class="evacuator-card swiper-slide">
-                    <!-- <div class="evacuator-card evacuator-card--crane swiper-slide slide-item"> -->
-                    <h4 class="evacuator-card__title card-title">Эвакуатор с краном-манипулятором и прямой платформой</h4>
-                    <div class="evacuator-card__image">
-                        <img src="./images/evacuator/crane-evacuator.webp" alt="Эвакуатор с краном-манипулятором и прямой платформой">
+
+        <div class="slider-wrapper">
+            <div class="swiper">
+                <div class="evacuators__types swiper-wrapper">
+                    <!-- <div class="evacuators__types swiper-wrapper"> -->
+                    <div class="evacuator-card swiper-slide">
+                        <!-- <div class="evacuator-card evacuator-card--crane swiper-slide slide-item"> -->
+                        <h4 class="evacuator-card__title card-title">Эвакуатор с краном-манипулятором и прямой платформой</h4>
+                        <div class="evacuator-card__image">
+                            <img src="./images/evacuator/crane-evacuator.webp" alt="Эвакуатор с краном-манипулятором и прямой платформой">
+                        </div>
+                        <p class="evacuator-card__description card-desc">
+                            Компактный и маневренный эвакуатор для транспортировки авто массой до 3.5 т. За счет вылета стрелы манипулятора осуществляет погрузку/разгрузку ТС с расстояния до 5 м. Удобен для эвакуации автомобилей с узких улиц/дворов, небольших стоянок/парковок Москвы.
+                        </p>
                     </div>
-                    <p class="evacuator-card__description card-desc">
-                        Компактный и маневренный эвакуатор для транспортировки авто массой до 3.5 т. За счет вылета стрелы манипулятора осуществляет погрузку/разгрузку ТС с расстояния до 5 м. Удобен для эвакуации автомобилей с узких улиц/дворов, небольших стоянок/парковок Москвы.
-                    </p>
+
+                    <div class="evacuator-card swiper-slide">
+                        <!-- <div class="evacuator-card evacuator-card--universal swiper-slide slide-item"> -->
+                        <h4 class="evacuator-card__title card-title">Эвакуатор с манипулятором и ломаной/сдвижной платформой</h4>
+                        <div class="evacuator-card__image">
+                            <img src="./images/evacuator/universal-evacuator.webp" alt="Эвакуатор с манипулятором и ломаной/сдвижной платформой">
+                        </div>
+                        <p class="evacuator-card__description card-desc">
+                            Универсальный и надежный эвакуатор для эвакуации любых видов транспортных средств, включая крупную сельскохозяйственную/строительную/коммунальную технику, а также авто с низким клиренсом. Этот тип эвакуатора может быть задействован при перевозке как сильно пострадавших в аварии автомобилей, так и ТС, которые в состоянии самостоятельно заехать на платформу эвакуатора.
+                        </p>
+                    </div>
+
+                    <div class="evacuator-card swiper-slide">
+                        <!-- <div class="evacuator-card evacuator-card--winch-platform swiper-slide slide-item"> -->
+                        <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и платформой с аппарелями</h4>
+                        <div class="evacuator-card__image">
+                            <img src="./images/evacuator/winch-platform-evacuator.webp" alt="Эвакуатор с лебедкой и платформой с аппарелями">
+                        </div>
+                        <p class="evacuator-card__description card-desc">
+                            Используется для перевозки ТС массой до 7 т. Автомобиль затаскивают на платформу эвакуатора по направляющим при помощи электрической/гидравлической/ручной лебедки. Эвакуатор данной модификации не применяется для транспортировки авто с АКПП или заблокированными колесами.
+                        </p>
+                    </div>
+
+                    <div class="evacuator-card swiper-slide">
+                        <!-- <div class="evacuator-card evacuator-card--partial-load swiper-slide slide-item"> -->
+                        <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто</h4>
+                        <div class="evacuator-card__image">
+                            <img src="./images/evacuator/partial-load-evacuator.webp" alt="Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто">
+                        </div>
+                        <p class="evacuator-card__description card-desc">
+                            Основное назначение – транспортировка крупнотоннажной спецтехники, грузовых авто, автобусов.
+                        </p>
+                    </div>
+
                 </div>
 
-                <div class="evacuator-card swiper-slide">
-                    <!-- <div class="evacuator-card evacuator-card--universal swiper-slide slide-item"> -->
-                    <h4 class="evacuator-card__title card-title">Эвакуатор с манипулятором и ломаной/сдвижной платформой</h4>
-                    <div class="evacuator-card__image">
-                        <img src="./images/evacuator/universal-evacuator.webp" alt="Эвакуатор с манипулятором и ломаной/сдвижной платформой">
-                    </div>
-                    <p class="evacuator-card__description card-desc">
-                        Универсальный и надежный эвакуатор для эвакуации любых видов транспортных средств, включая крупную сельскохозяйственную/строительную/коммунальную технику, а также авто с низким клиренсом. Этот тип эвакуатора может быть задействован при перевозке как сильно пострадавших в аварии автомобилей, так и ТС, которые в состоянии самостоятельно заехать на платформу эвакуатора.
-                    </p>
-                </div>
+                <!-- Pagination -->
+                <div class="swiper-pagination"></div>
 
-                <div class="evacuator-card swiper-slide">
-                    <!-- <div class="evacuator-card evacuator-card--winch-platform swiper-slide slide-item"> -->
-                    <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и платформой с аппарелями</h4>
-                    <div class="evacuator-card__image">
-                        <img src="./images/evacuator/winch-platform-evacuator.webp" alt="Эвакуатор с лебедкой и платформой с аппарелями">
-                    </div>
-                    <p class="evacuator-card__description card-desc">
-                        Используется для перевозки ТС массой до 7 т. Автомобиль затаскивают на платформу эвакуатора по направляющим при помощи электрической/гидравлической/ручной лебедки. Эвакуатор данной модификации не применяется для транспортировки авто с АКПП или заблокированными колесами.
-                    </p>
-                </div>
+                <!-- Navigation buttons -->
+                <!-- <div class="swiper-button-prev"></div> -->
+                <!-- <div class="swiper-button-next"></div> -->
 
-                <div class="evacuator-card swiper-slide">
-                    <!-- <div class="evacuator-card evacuator-card--partial-load swiper-slide slide-item"> -->
-                    <h4 class="evacuator-card__title card-title">Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто</h4>
-                    <div class="evacuator-card__image">
-                        <img src="./images/evacuator/partial-load-evacuator.webp" alt="Эвакуатор с лебедкой и укороченной базой для частичной погрузки авто">
-                    </div>
-                    <p class="evacuator-card__description card-desc">
-                        Основное назначение – транспортировка крупнотоннажной спецтехники, грузовых авто, автобусов.
-                    </p>
-                </div>
+                <!-- Scrollbar -->
+                <!-- <div class="swiper-scrollbar"></div> -->
 
             </div>
-
-            <!-- Pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- Navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- Scrollbar -->
-            <!-- <div class="swiper-scrollbar"></div> -->
-
+            <div class="myslider-prev swiper-button-prev"></div>
+            <div class="myslider-next swiper-button-next"></div>
         </div>
     </section>
 
