--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header1">
+    <header class="header none1">
         <div class="header__logo">
             <img src="./images/svg/logo.svg" alt="Logo">
         </div>
@@ -25,13 +25,13 @@
         </nav>
     </header>
 
-    <section class="hero1">
+    <section class="hero none1">
         <div class="hero__content">
             <h1 class="hero__title">Телефоны для вызова эвакуатора в <a href="#" class="hero__link">Москве</a></h1>
         </div>
     </section>
 
-    <section class="services1">
+    <section class="services none1">
         <div class="services__list">
 
             <div class="service-card">
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="what-inside">
+    <section class="what-inside none1">
         <div class="container">
             <h2 class="what-inside__title">Что входит в стоимость перевозки эвакуатором</h2>
             <p class="what-inside__desc">Стоимость эвакуации включает в себя оплату услуг по погрузке, перевозке и выгрузке авто, а также по подаче эвакуатора в пункт дислокации ТС в Москве.<br><br></p>
