feat: add section - info

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вызов эвакуатора</title>
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -112,7 +111,6 @@
                 </div>
             </article>
         </div>
-
     </section>
 
     <section class="steps none1">
@@ -197,7 +195,6 @@
             </div>
 
         </div>
-
     </section>
 
     <section class="evacuators container none1">
@@ -255,7 +252,6 @@
                             Основное назначение – транспортировка крупнотоннажной спецтехники, грузовых авто, автобусов.
                         </p>
                     </div>
-
                 </div>
 
                 <!-- Pagination -->
@@ -274,14 +270,41 @@
         </div>
     </section>
 
+    <section class="info none1">
+        <div class="info__wrapper">
+            <div class="info-block">
+                <div class="info-block__box">
+                    <h2 class="info-block__title h2-text">Что необходимо сообщить при заказе эвакуатора</h2>
+                    <p class="info-block__desc p-text">Чтобы выбрать эвакуатор с необходимыми техническими параметрами и минимизировать расходы, при вызове эвакуатора следует указать:</p>
+                    <ul class="info-block__list p-text">
+                        <li class="info-block__list-item">марку, модель, год выпуска и полную массу авто</li>
+                        <li class="info-block__list-item">характер неисправности ТС</li>
+                        <li class="info-block__list-item">состояние ходовой части, трансмиссии, рулевого управления</li>
+                        <li class="info-block__list-item">адрес подачи эвакуатора и пункт конечного назначения в Москве</li>
+                        <li class="info-block__list-item">наличие ключей от авто и документов, подтверждающих право на управление ТС (водительские права, техпаспорт и доверенность, если вы не собственник авто)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="image-block">
+                <img src="./images/info/info-block1.webp" alt="Эвакуатор" class="image-block__image">
+            </div>
+        </div>
 
-
-    <section class="pricing">
-        <h2 class="pricing__title">Стоимость вызова эвакуатора</h2>
-        <ul class="pricing__list">
-            <li class="pricing__item">Эвакуация авто в пределах МКАД: от 1 200 руб.</li>
-            <!-- Repeat for other pricing details -->
-        </ul>
+        <div class="info__wrapper info__wrapper--reverse">
+            <div class="info-block">
+                <div class="info-block__box">
+                    <h2 class="info-block__title h2-text">Как эвакуировать авто с заблокированными колесами</h2>
+                    <p class="info-block__desc p-text">При помощи сервиса ТутЭвакуатор.Ру вы сможете вызвать эвакуатор в экстренных ситуациях, например, когда колеса авто заблокированы или ходовая ТС критически пострадала в результате аварии.<br><br>Перевозка автомобиля с заблокированными колесами возможна несколькими типами эвакуаторов:</p>
+                    <ul class="info-block__list p-text">
+                        <li class="info-block__list-item">Эвакуатор с манипулятором. На ТС устанавливают четыре колесных захвата, закрепленных на широких текстильных стропах. С помощью специальных петель оператор манипулятора регулирует длину строп, чтобы при перемещении на эвакуатор авто не кренилось. Стропы присоединяют к линейной или H-образной траверсе. Кран-манипулятор подхватывает траверсу за проушину, поднимает автомобиль и загружает на платформу эвакуатора.</li>
+                        <li class="info-block__list-item">Эвакуатор с гидроплатформой (без аппарелей) и лебедкой. Авто приподнимают домкратом, под заблокированные колеса устанавливают подкатные тележки. При помощи лебедки авто затягивают на наклонную платформу эвакуатора. После этого платформу эвакуатора приводят в горизонтальное положение.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="image-block">
+                <img src="./images/info/info-block2.webp" alt="Эвакуатор" class="image-block__image">
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
@@ -291,10 +314,8 @@
         </div>
     </footer>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
-
 </body>
 
 </html>
